--- a/index.html
+++ b/index.html
@@ -472,8 +472,8 @@
         <div class="container">
             <div class="col-l2">
                 <div class="section-title text-center">
-                    <span>We Are With You</span>
-                    <h2>Our Team Members</h2>
+                    <span>Мы С Вами</span>
+                    <h2>Наши Тренера</h2>
                 </div>
             </div>
             <div class="row">
@@ -490,7 +490,7 @@
                             </div>
                         </div>
                         <div class="team-content">
-                            <h4>Elizabeth Bannet</h4>
+                            <h4>Фурхат</h4>
                             <span>Logistic Maneger</span>
                         </div>
                     </div>
@@ -508,7 +508,7 @@
                             </div>
                         </div>
                         <div class="team-content">
-                            <h4>Johnthan Rok</h4>
+                            <h4>Фурхат</h4>
                             <span>Packeging Maneger</span>
                         </div>
                     </div>
@@ -526,7 +526,7 @@
                             </div>
                         </div>
                         <div class="team-content">
-                            <h4>Simon D’soza</h4>
+                            <h4>Фурхат</h4>
                             <span>Logistic Maneger</span>
                         </div>
                     </div>
@@ -540,8 +540,8 @@
         <div class="container">
             <div class="col-l2">
                 <div class="section-title section-title-3 text-center">
-                    <span>Stay With Our Blog</span>
-                    <h2>Our Latest News</h2>
+                    <span>Будь С Нами</span>
+                    <h2>Наши Последние Новости</h2>
                 </div>
             </div>
             <div class="row">
@@ -551,7 +551,7 @@
                             <img src="assets/images/blog/4.jpg" alt="">
                             <div class="blog-s-text">
                                 <div class="blog-content">    
-                                    <h3>We can ensure you about the safe delevery</h3>
+                                    <h3>Недавно к нам приходил бла бла бла</h3>
                                 </div>
                                 <div class="blog-content-sub blog-content-sub-2">
                                     <ul>
@@ -562,8 +562,8 @@
                             </div>
                             <div class="blog-text">
                                 <div class="blog-content blog-content2">    
-                                    <h3><a href="blog-details.html">We can ensure you about the safe delevery</a></h3>
-                                    <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration</p>
+                                    <h3><a href="blog-details.html">Кто то из знаменитостей записался в наш зал</a></h3>
+                                    <p>И теперь будет тренироваться в Gold Fitness .</p>
                                     <a href="blog-details.html">Read more...</a>
                                 </div>
                                 <div class="blog-content-sub blog-content-sub-2">
@@ -582,7 +582,7 @@
                             <img src="assets/images/blog/5.jpg" alt="">
                             <div class="blog-s-text">
                                 <div class="blog-content">    
-                                    <h3>We can ensure you about the safe delevery</h3>
+                                    <h3>Недавно к нам приходил бла бла бла</h3>
                                 </div>
                                 <div class="blog-content-sub blog-content-sub-2">
                                     <ul>
@@ -613,7 +613,7 @@
                             <img src="assets/images/blog/6.jpg" alt="">
                             <div class="blog-s-text">
                                 <div class="blog-content">    
-                                    <h3>We can ensure you about the safe delevery</h3>
+                                    <h3>Недавно к нам приходил бла бла бла</h3>
                                 </div>
                                 <div class="blog-content-sub blog-content-sub-2">
                                     <ul>
@@ -624,7 +624,7 @@
                             </div>
                             <div class="blog-text">
                                 <div class="blog-content blog-content2">    
-                                    <h3><a href="blog-details.html">We can ensure you about the safe delevery</a></h3>
+                                    <h3><a href="blog-details.html">... записался в наш зал </a></h3>
                                     <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration</p>
                                     <a href="blog-details.html">Read more...</a>
                                 </div>
