--- a/index.html
+++ b/index.html
@@ -409,17 +409,17 @@
                         <div class="col-lg-4 col-l2 col-md-6 col-sm-6">
                             <div class="price-item">
                                 <div class="pricing-header">
-                                    <h3>Free</h3>
+                                    <h3>Дневной абонимент</h3>
                                     <span>Per Mile</span>
                                 </div>
                                 <div class="pricing-table">
                                     <div class="price-sub-header">
-                                        <h4>$120</h4>
+                                        <h4>1500 СОМ</h4>
                                     </div>
                                     <ul>
-                                        <li>3000 kg load</li>
-                                        <li>125 kg / pallet</li>
-                                        <li>24/7 support</li>
+                                        <li>С 8:00 до 17:00</li>
+                                        <li>С тренером</li>
+                                        <li>С Пн - Сб</li>
                                         <li>Free Packaging</li>
                                         <li>Warehousing</li>
                                     </ul>
@@ -434,17 +434,17 @@
                         <div class="col-lg-4 col-l2 col-md-6 col-sm-6">
                             <div class="price-item">
                                 <div class="pricing-header">
-                                    <h3>Basaic</h3>
+                                    <h3>Вечерний абонимент</h3>
                                     <span>Per Mile</span>
                                 </div>
                                 <div class="pricing-table">
                                     <div class="price-sub-header">
-                                        <h4>$250</h4>
+                                        <h4>2000 СОМ</h4>
                                     </div>
                                     <ul>
-                                        <li>3000 kg load</li>
-                                        <li>125 kg / pallet</li>
-                                        <li>24/7 support</li>
+                                        <li>С 8:00 до 23:00</li>
+                                        <li>С тренером</li>
+                                        <li>С Пн - Сб</li>
                                         <li>Free Packaging</li>
                                         <li>Warehousing</li>
                                     </ul>
@@ -459,17 +459,17 @@
                         <div class="col-lg-4 col-l2 col-md-6 col-sm-6">
                             <div class="price-item">
                                 <div class="pricing-header">
-                                    <h3>Premium</h3>
+                                    <h3>Женский абонимент</h3>
                                     <span>Per Mile</span>
                                 </div>
                                 <div class="pricing-table">
                                     <div class="price-sub-header">
-                                        <h4>$250</h4>
+                                        <h4>1500 СОМ</h4>
                                     </div>
                                     <ul>
-                                        <li>3000 kg load</li>
-                                        <li>125 kg / pallet</li>
-                                        <li>24/7 support</li>
+                                        <li>С 8:00 до 23:00</li>                                        
+                                        <li>С тренером</li>
+                                        <li>С Пн - Сб</li>
                                         <li>Free Packaging</li>
                                         <li>Warehousing</li>
                                     </ul>
