--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <link href="assets/css/font-awesome.min.css" rel="stylesheet">
     <link href="assets/css/flaticon.css" rel="stylesheet">
     <!-- Bootstrap core CSS -->
-    <link href="assets/css/bootstrap.min.css" rel="stylesheet">
+    <link href="ass
+    ets/css/bootstrap.min.css" rel="stylesheet">
     <!-- Plugins for this template -->
     <link href="assets/css/animate.css" rel="stylesheet">
     <link href="assets/css/owl.carousel.css" rel="stylesheet">
@@ -486,6 +487,10 @@
             </div>
         </div>
     </div>
+    <h2>Я карта</h2>
+    <div id="DivKarta">
+    <iframe id="Karta" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1462.0908684733743!2d74.63676112356606!3d42.869008126170804!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zNDLCsDUyJzA4LjQiTiA3NMKwMzgnMTQuNiJF!5e0!3m2!1sru!2skg!4v1551184571375" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+    </div>   
     <!-- pice-area end -->
     <!-- testimonial-area start -->
     <div class="testimonial-area">
