--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                                 <ul class="d-flex header-social">
                                     <li><a href="index.html#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
                                     <li><a href="index.html#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-                                    <li><a href="index.html#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+                                    <li><a href="https://www.instagram.com/gold_fitness_kg/"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
                                     <li><a href="index.html#"><i class="fa fa-google-plus" aria-hidden="true"></i></a></li>
                                 </ul>
                             </div>
