Fixed Bootstap bags

--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
     <link href="assets/css/font-awesome.min.css" rel="stylesheet">
     <link href="assets/css/flaticon.css" rel="stylesheet">
     <!-- Bootstrap core CSS -->
-    <link href="ass
-    ets/css/bootstrap.min.css" rel="stylesheet">
+    <link href="assets/css/bootstrap.min.css" rel="stylesheet">
     <!-- Plugins for this template -->
     <link href="assets/css/animate.css" rel="stylesheet">
     <link href="assets/css/owl.carousel.css" rel="stylesheet">
