--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="shortcut icon" type="image/png" href="assets/images/icon.png">
+    <link rel="shortcut icon" type="image/png" href="./assets/images/GoldImages/new.png">
     <!-- Page Title -->
     <title> Gold Fitness </title>
     <!-- Icon fonts -->
@@ -72,7 +72,7 @@
                 <div class="row">
                     <div class="col-lg-3 col-md-9 col-sm-9 col-9">
                         <div class="logo">
-                            Gold Fitness
+                            <!-- <img class="gold" src="./assets/images/GoldImages/new.png"></img> -->
                         </div>
                     </div>
                     <div class="col-lg-8 d-none d-lg-block">
@@ -422,11 +422,11 @@
                                         <li>Free Packaging</li>
                                         <li>Warehousing</li>
                                     </ul>
-                                    <div class="pricing-footer">
+                                  <!--   <div class="pricing-footer">
                                         <div class="btns">
                                             <div class="btn-style btn-style-4"><a href="index.html#">Order Now</a></div>
                                         </div>
-                                    </div>
+                                    </div> -->
                                 </div>
                             </div>
                         </div>
@@ -447,11 +447,11 @@
                                         <li>Free Packaging</li>
                                         <li>Warehousing</li>
                                     </ul>
-                                    <div class="pricing-footer">
+                                    <!-- <div class="pricing-footer">
                                         <div class="btns">
                                             <div class="btn-style btn-style-4"><a href="index.html#">Order Now</a></div>
                                         </div>
-                                    </div>
+                                    </div> -->
                                 </div>
                             </div>
                         </div>
@@ -472,11 +472,7 @@
                                         <li>Free Packaging</li>
                                         <li>Warehousing</li>
                                     </ul>
-                                    <div class="pricing-footer">
-                                        <div class="btns">
-                                            <div class="btn-style btn-style-4"><a href="index.html#">Order Now</a></div>
-                                        </div>
-                                    </div>
+                                   
                                 </div>
                             </div>
                         </div>
