--- a/index.html
+++ b/index.html
@@ -72,6 +72,9 @@
                 <div class="row">
                     <div class="col-lg-3 col-md-9 col-sm-9 col-9">
                         <div class="logo">
+                            <p>
+                                GOLD FITNESS
+                            </p>
                             <!-- <img class="gold" src="./assets/images/GoldImages/new.png"></img> -->
                         </div>
                     </div>
