--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link href="assets/css/flaticon.css" rel="stylesheet">
     <!-- Bootstrap core CSS -->
     <link href="assets/css/bootstrap.min.css" rel="stylesheet">
-    <!-- Plugins for this template -->
+    <!---- Plugins for this template ---->
     <link href="assets/css/animate.css" rel="stylesheet">
     <link href="assets/css/owl.carousel.css" rel="stylesheet">
     <link href="assets/css/odometer-theme-default.css" rel="stylesheet">
