--- a/index.html
+++ b/index.html
@@ -296,22 +296,17 @@
         <div class="container">
             <div class="section-title text-center">
                 <span>Покупай Спортивную Еду По Оптимальной Цене</span>
-            <button type="button" class="slick-prev">Previous</button>  
                 <h2>Наши товары</h2>
             </div>
             <div class="multiple-items">
-                <div class="square"><img src="./2.jpg"></div>
-                <div class="square"><img src="./1.jpg"></div>
-                <div class="square"><img src="./3.jpg"></div>
-                <div class="square"><img src="./4.jpg"></div>
-                <div class="square"><img src="./273578490-1-696x392.jpg"></div>
-                <div class="square"><img src="./Samyie-krasivyie-foto-kosmosa-za-proshedshiy-mesyats-po-versii-NASA-2.jpg"></div>
-                <div class="square"><img src="./krasivye_foto_pro_ljubov_09.jpg"></div>
-                <div class="square"><img src="./images.jpeg"></div>
-                <div class="square">9</div>
+                <div class="square"><img src="./assets/images/blog/1.jpg">Этот товар Our Some Important Things That will Satisfite You...</div>
+                <div class="square"><img src="./assets/images/blog/2.jpg">Этот товар Our Some Important Things That will Satisfite You...</div>
+                <div class="square"><img src="./assets/images/blog/3.jpg">Этот товар Our Some Important Things That will Satisfite You...</div>
+                <div class="square"><img src="./assets/images/blog/4.jpg">Этот товар Our Some Important Things That will Satisfite You...</div>
+                <div class="square"><img src="./assets/images/blog/5.jpg">Этот товар Our Some Important Things That will Satisfite You...</div>
+                <div class="square"><img src="./assets/images/blog/6.jpg">Этот товар Our Some Important Things That will Satisfite You...</div>
+
               </div>
-              <button type="button" class="slick-next">Next</button>
-          
         </div>
     </div>
     <!-- feature-area start -->
