--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col col-lg-9 slide-caption">
-                            <h2><span>We Provide the Best Solution</span> <span>For Your Transport.</span></h2>
+                            <h2><span>Стань крепче, сильнее и увереннее </span> <span>вместе с Gold Fitness!</span></h2>
                             <div class="btns">
                                 <div class="btn-style"><a href="index.html#">Contact us now</a></div>
                             </div>
@@ -214,28 +214,29 @@
             <div class="row">
                 <div class="col-lg-6">
                     <div class="about-img">
-                        <img src="assets/images/about/about.svg" alt="">
-                    </div>
+                        <div class="gym">
+                        <img src="./assets/images/gym.svg">
+                     </div>
+                 </div>
                 </div>
                 <div class="col-lg-6 sec-p">
                     <div class="about-content">
                         <div class="about-icon">
-                            <i class="fi flaticon-travel"></i>
+                            <!-- <i class="fi flaticon-travel"></i> -->
+                            
                         </div>
-                        <h2>Кто мы такие?</h2>
-                        <p>It is a long established fact that a reader will be distracted by the readable content of a
-                            page when looking at its layout. The point of using Lorem Ipsum is that it has a
-                            more-or-less</p>
-                        <span>Long established fact that a reader</span>
-                        <span>We making it look like readable English.</span>
-                        <span>Long established fact that a reader</span>
+                        <h2>Чем Хорош Gold Fitness?</h2>
+                    
+                        <span><h5>Выгодная система оплаты</h5>У нас несгораемый абонимент - вы платите только за те занятия, которые посетили. </span>
+                        <span><h5>Удобное расписание</h5>Вы можете заниматься утром, в полдень или вечером (в зависимости от Вашего графика). </span>
+                        <span><h5>Великолепный тренерский состав</h5>Великолепный тренерский состав: мастера спорта международного класса, мастера спорта республики Кыргызстана, чемпионы Азии и Кыргызстана.</span>
                     </div>
-                    <div class="signature-section">
+                    <!-- <div class="signature-section">
                         <div class="si-text">
                             <p>Ketty Raigott</p>
                             <span>Chairman & Chief Executive Officer</span>
                         </div>
-                        <img src="assets/images/about/1.png" alt="">
+                        <img src="assets/images/about/1.png" alt=""> -->
                     </div>
                 </div>
             </div>
@@ -371,7 +372,7 @@
                             <div class="price-item">
                                 <div class="pricing-header">
                                     <h3>Дневной абонимент</h3>
-                                    <span>Per Mile</span>
+                                    <span>Месяц</span>
                                 </div>
                                 <div class="pricing-table">
                                     <div class="price-sub-header">
@@ -381,7 +382,7 @@
                                         <li>С 8:00 до 17:00</li>
                                         <li>С тренером</li>
                                         <li>С Пн - Сб</li>
-                                        <li>Free Packaging</li>
+                                        <li>12 Посящений</li>
                                         <li>Warehousing</li>
                                     </ul>
                                     <!--   <div class="pricing-footer">
@@ -396,7 +397,7 @@
                             <div class="price-item">
                                 <div class="pricing-header">
                                     <h3>Вечерний абонимент</h3>
-                                    <span>Per Mile</span>
+                                    <span>Месяц</span>
                                 </div>
                                 <div class="pricing-table">
                                     <div class="price-sub-header">
@@ -404,9 +405,9 @@
                                     </div>
                                     <ul>
                                         <li>С 8:00 до 23:00</li>
-                                        <li>С тренером</li>
+                                        <li>С Тренером</li>
                                         <li>С Пн - Сб</li>
-                                        <li>Free Packaging</li>
+                                        <li>12 Посящений</li>
                                         <li>Warehousing</li>
                                     </ul>
                                     <!-- <div class="pricing-footer">
@@ -421,7 +422,7 @@
                             <div class="price-item">
                                 <div class="pricing-header">
                                     <h3>Женский абонимент</h3>
-                                    <span>Per Mile</span>
+                                    <span>Месяц</span>
                                 </div>
                                 <div class="pricing-table">
                                     <div class="price-sub-header">
@@ -431,7 +432,7 @@
                                         <li>С 8:00 до 23:00</li>
                                         <li>С тренером</li>
                                         <li>С Пн - Сб</li>
-                                        <li>Free Packaging</li>
+                                        <li>12 Посящений</li>
                                         <li>Warehousing</li>
                                     </ul>
 
