--- a/index.html
+++ b/index.html
@@ -141,18 +141,7 @@
                         </div>
                     </div>
                     <div class="col-lg-1 col-md-3 col-sm-3 col-3 search">
-                        <ul>
-                            <li><a href="javascript:void(0);"><i class="fa fa-search"></i></a>
-                                <ul>
-                                    <li>
-                                        <form action="http://wpocean.com/tf/html/shipter/search">
-                                            <input type="text" placeholder="search here..">
-                                            <button><i class="fa fa-search"></i></button>
-                                        </form>
-                                    </li>
-                                </ul>
-                            </li>
-                        </ul>
+                      <!-- Empty -->
                     </div>
                     <div class="col-12 d-block d-lg-none">
                         <div class="mobile_menu"></div>
@@ -183,7 +172,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col col-lg-9 slide-caption">
-                            <h2><span>Стань крепче, сильнее и увереннее </span> <span>вместе с Gold Fitness!</span></h2>
+                            <h2><span>Стань Крепче, Сильнее и </span> <span>Увереннее  Вместе с Gold Fitness!</span></h2>
                             <div class="btns">
                                 <div class="btn-style"><a href="index.html#">Contact us now</a></div>
                             </div>
@@ -673,7 +662,7 @@
     <!-- blog-area start -->
    
     <!-- .footer-area start -->
-
+   
 
     <!-- .footer-area end -->
     <!-- All JavaScript files
