--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@
                     <div class="col-lg-12 col-md-12 col-sm-12">
                         <div class="row">
                             <div class="col-lg-4 col-l2 col-md-6 col-sm-6">
-                                <div class="price-item">
+                                <!-- <div class="price-item">
                                     <div class="pricing-header">
                                         <h3>Дневной абонимент</h3>
                                         <span>Месяц</span>
@@ -411,7 +411,7 @@
                                         </div>
                                     </div> -->
                                     </div>
-                                </div>
+                                </div> -->
                             </div>
                             <div class="col-lg-4 col-l2 col-md-6 col-sm-6">
                                 <div class="price-item">
@@ -706,7 +706,20 @@
         <!-- blog-area start -->
 
         <!-- .footer-area start -->
-
+        <div class="footer">
+            <div class="row">
+            <div class="col-md-6">ABC
+               
+            </div>
+            <div class="col-md-6">ABC</div> 
+            </div>
+        </div>
+        <div>
+            <img src="./assets/images/block14.jpg">
+        </div>
+        <div>
+            <img src="./assets/images/block19.jpg">
+        </div>
 
         <!-- .footer-area end -->
         <!-- All JavaScript files
