--- a/index.html
+++ b/index.html
@@ -385,33 +385,38 @@
                     <span>У Нас Лучшие Цены</span>
                     <h2>Наши Цены</h2>
                 </div>
-                <div class="row">
-                    <div class="col-lg-12 col-md-12 col-sm-12">
+                <div class="flex container_01">
+                    <div class=" aboniment_border">
+                        <div class="aboniment_content">
+                            <div class="text_blog">
+                                Утренний до 12:00
+                            </div>
+                            <div class="price">
+                                3000 сом.
+                            </div>
+                        </div>
+
+                    </div>
+                    <div class=" aboniment_border">
+                        <div class="aboniment_content"></div>
+                        wddw
+
+                    </div>
+                    <div class=" aboniment_border">
+                        <div class="aboniment_content"></div>
+
+                        dwdw
+                    </div>
+
+                </div>
+            </div>
+        </div>
+        <!-- <div class="col-lg-12 col-md-12 col-sm-12">
                         <div class="row">
                             <div class="col-lg-4 col-l2 col-md-6 col-sm-6">
-                                <!-- <div class="price-item">
-                                    <div class="pricing-header">
-                                        <h3>Дневной абонимент</h3>
-                                        <span>Месяц</span>
+
                                     </div>
-                                    <div class="pricing-table">
-                                        <div class="price-sub-header">
-                                            <h4>1500 СОМ</h4>
-                                        </div>
-                                        <ul>
-                                            <li>С 8:00 до 17:00</li>
-                                            <li>С тренером</li>
-                                            <li>С Пн - Сб</li>
-                                            <li>12 Посящений</li>
-                                            <li>Warehousing</li>
-                                        </ul>
-                                        <!--   <div class="pricing-footer">
-                                        <div class="btns">
-                                            <div class="btn-style btn-style-4"><a href="index.html#">Order Now</a></div>
-                                        </div>
-                                    </div> -->
-                                    </div>
-                                </div> -->
+                                </div> 
                             </div>
                             <div class="col-lg-4 col-l2 col-md-6 col-sm-6">
                                 <div class="price-item">
@@ -430,11 +435,11 @@
                                             <li>12 Посящений</li>
                                             <li>Warehousing</li>
                                         </ul>
-                                        <!-- <div class="pricing-footer">
+                                        <!-<div class="pricing-footer">
                                         <div class="btns">
                                             <div class="btn-style btn-style-4"><a href="index.html#">Order Now</a></div>
                                         </div>
-                                    </div> -->
+                                    </div>
                                     </div>
                                 </div>
                             </div>
@@ -460,10 +465,8 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+                    </div> -->
+
         <!-- <h2>Я карта</h2>
     <div id="DivKarta">
         <iframe id="Karta" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1462.0908684733743!2d74.63676112356606!3d42.869008126170804!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zNDLCsDUyJzA4LjQiTiA3NMKwMzgnMTQuNiJF!5e0!3m2!1sru!2skg!4v1551184571375"
@@ -708,10 +711,10 @@
         <!-- .footer-area start -->
         <div class="footer">
             <div class="row">
-            <div class="col-md-6">ABC
-               
-            </div>
-            <div class="col-md-6">ABC</div> 
+                <div class="col-md-6">ABC
+
+                </div>
+                <div class="col-md-6">ABC</div>
             </div>
         </div>
         <div>
