--- a/index.html
+++ b/index.html
@@ -151,15 +151,15 @@
                         <div class="col col-lg-9 slide-caption">
                             <h2><span>Спорт это Биение твоего сердца, это твой </span> <span>РИТМ жизни . . .</span>
                             </h2>
-                            <div class="btns">
+                            <!-- <div class="btns">
                                 <div class="btn-style"><a href="index.html#">Contact us now</a></div>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                 </div>
             </div>
             <div class="slide">
-                <img src="assets/images/slider/2.jpg" alt class="slider-bg">
+                <img src="assets/images/slider/5c1631b05ba956feb0b568b5_image-120.jpg" alt class="slider-bg">
                 <div class="container">
                     <div class="row">
                         <div class="col col-lg-9 slide-caption">
