Fixed bags with icons

--- a/index.html
+++ b/index.html
@@ -793,19 +793,6 @@
         <!-- blog-area start -->
 
         <!-- .footer-area start -->
-        <!--  <div class="footer_1">
-            <row>
-                <div class=" col-md-4 map">
-                    <iframe
-                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d731.0456491350257!2d74.63685482918828!3d42.86898998160811!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zNDLCsDUyJzA4LjQiTiA3NMKwMzgnMTQuNyJF!5e0!3m2!1sru!2skg!4v1555480963741!5m2!1sru!2skg"
-                        width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
-                </div>
-                <div class="col-md-4 foot_text">
-
-                </div>
-
-            </row>
-        </div> -->
         <div class="footer container">
             <div class="row">
                 <div class=" col-md-6 map">
@@ -838,28 +825,28 @@
                         </div>
                     </div>
                     <div class="first_row">
-                        <div>
-                            <div class="foot_text_blog foot_icon_3">
+                        <div class="a">
+                            <div class="foot_text_blog foot_icon_3 ">
                                 Адресс:
                             </div>
                             <div class="text_2">
-
-                                г. Астана
-                                ул. Тауельсыздык 4/2,
-                                ул. Кенесары 8,
-                                ул. Бокейхана 2
+                                    +7 (776) 409 68 68
                             </div>
                         </div>
                         <div>
                             <div class="foot_text_blog foot_icon_4">
-                                Режим работы:
+                                Режим:
                             </div>
                             <div class="text_2">
-                                Понедельник - Суббота 8:00 - 22:00
+                                <!-- Понедельник - Суббота 8:00 - 22:00 -->
+                                info@gmail.com
                             </div>
                         </div>
                     </div>
                 </div>
+            </div>
+            <div class="foot_copy">
+
             </div>
         </div>
 
