--- a/index.html
+++ b/index.html
@@ -491,109 +491,7 @@
                 </div>
             </div>
         </div>
-        <!-- <div class="col-lg-12 col-md-12 col-sm-12">
-                        <div class="row">
-                            <div class="col-lg-4 col-l2 col-md-6 col-sm-6">
 
-                                    </div>
-                                </div> 
-                            </div>
-                            <div class="col-lg-4 col-l2 col-md-6 col-sm-6">
-                                <div class="price-item">
-                                    <div class="pricing-header">
-                                        <h3>Вечерний абонимент</h3>
-                                        <span>Месяц</span>
-                                    </div>
-                                    <div class="pricing-table">
-                                        <div class="price-sub-header">
-                                            <h4>2000 СОМ</h4>
-                                        </div>
-                                        <ul>
-                                            <li>С 8:00 до 23:00</li>
-                                            <li>С Тренером</li>
-                                            <li>С Пн - Сб</li>
-                                            <li>12 Посящений</li>
-                                            <li>Warehousing</li>
-                                        </ul>
-                                        <!-<div class="pricing-footer">
-                                        <div class="btns">
-                                            <div class="btn-style btn-style-4"><a href="index.html#">Order Now</a></div>
-                                        </div>
-                                    </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-lg-4 col-l2 col-md-6 col-sm-6">
-                                <div class="price-item">
-                                    <div class="pricing-header">
-                                        <h3>Женский абонимент</h3>
-                                        <span>Месяц</span>
-                                    </div>
-                                    <div class="pricing-table">
-                                        <div class="price-sub-header">
-                                            <h4>1500 СОМ</h4>
-                                        </div>
-                                        <ul>
-                                            <li>С 8:00 до 23:00</li>
-                                            <li>С тренером</li>
-                                            <li>С Пн - Сб</li>
-                                            <li>12 Посящений</li>
-                                            <li>Warehousing</li>
-                                        </ul>
-
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div> -->
-
-        <!-- <h2>Я карта</h2>
-    <div id="DivKarta">
-        <iframe id="Karta" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1462.0908684733743!2d74.63676112356606!3d42.869008126170804!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zNDLCsDUyJzA4LjQiTiA3NMKwMzgnMTQuNiJF!5e0!3m2!1sru!2skg!4v1551184571375"
-            width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
-    </div> -->
-        <!-- pice-area end -->
-        <!-- testimonial-area start -->
-        <!-- <div class="testimonial-area">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-6 offset-lg-3">
-                    <div class="testimonial-active owl-carousel">
-                        <div class="testimonial-wrap">
-                            <div class="testimonial-img">
-                                <img src="assets/images/testimonial/2.jpg" alt="">
-                            </div>
-                            <div class="testimonial-item">
-                                <div class="testimonial-content">
-                                    <p>There are many variations of passages of Lorem Ipsum available, but the majority
-                                        have suffered alteration in some</p>
-                                    <h4>Manela Watson</h4>
-                                    <span>Derector of ATV</span>
-                                </div>
-                            </div>
-                            <div class="test-c d-none d-lg-block"></div>
-                            <div class="test-b d-none d-lg-block"></div>
-                        </div>
-                        <div class="testimonial-wrap">
-                            <div class="testimonial-img">
-                                <img src="assets/images/testimonial/2.jpg" alt="">
-                            </div>
-                            <div class="testimonial-item">
-                                <div class="testimonial-content">
-                                    <p>There are many variations of passages of Lorem Ipsum available, but the majority
-                                        have suffered alteration in some</p>
-                                    <h4>Manela Watson</h4>
-                                    <span>Derector of ATV</span>
-                                </div>
-                            </div>
-                            <div class="test-c d-none d-lg-block"></div>
-                            <div class="test-b d-none d-lg-block"></div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div> -->
         <!-- testimonial-area end -->
         <!-- team-area start -->
         <div class="team-area team-area-2">
@@ -805,8 +703,8 @@
                     <div class="contact">
                         Контакты
                     </div>
-                    <div class="first_row">
-                        <div>
+                    <div class="row">
+                        <div class="col-md-4 ">
                             <div class="foot_text_blog">
                                 Телефон:
                             </div>
@@ -814,7 +712,7 @@
                                 +7 (776) 409 68 68
                             </div>
                         </div>
-                        <div>
+                        <div class="col-md-4 ">
                             <div class="foot_text_blog foot_icon_2">
                                 Email:
                             </div>
@@ -823,32 +721,40 @@
                                 info@gmail.com
                             </div>
                         </div>
-                    </div>
-                    <div class="first_row">
-                        <div class="a">
+                        <div class="col-md-4 ">
                             <div class="foot_text_blog foot_icon_3 ">
                                 Адресс:
                             </div>
                             <div class="text_2">
-                                    +7 (776) 409 68 68
+                                +7 (776) 409 68 68
                             </div>
                         </div>
-                        <div>
+                    </div>
+                    <div class="row foot_last">
+                        <div class="col-md-6">
                             <div class="foot_text_blog foot_icon_4">
                                 Режим:
                             </div>
                             <div class="text_2">
-                                <!-- Понедельник - Суббота 8:00 - 22:00 -->
+                                Понедельник - Суббота 8:00 - 22:00
                                 info@gmail.com
                             </div>
+                        </div>
+                        <div class="col-md-6 footer_icons foot_text_blog">
+                            Социальные сети: <br>  
+                           <a href="#"> <i class="fa fa-facebook text_2"></i></a>
+                           <a href="#">  <i class="fa fa-instagram text_2"></i></a>
+                            <a href="#">  <i class="fa fa-twitch text_2"></i></a>
+
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="foot_copy">
-
-            </div>
         </div>
+        <div class="foot_copy">
+
+        </div>
+    </div>
 
 
 
@@ -870,79 +776,3 @@
 </body>
 
 </html>
-
-
-
-
-
-
-
-
-
-
-<!-- <div class="row">
-                <div class="col-lg-4 col-md-6">
-                    <div class="features-item features-item-2">
-                        <div class="col-lg-12 col-md-12 col-sm-12">
-                            <div class="feature-wrap">
-                                <div class="features-icon features-icon2">
-                                    <i class="fi flaticon-plane"></i>
-
-                                </div>
-                                <div class="features-text">
-                                    <h3>First Air Freight</h3>
-                                    <p>Many desktop publishing packages and web page editors now use Lorem Ipsum as
-                                        their default model text,</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-12 col-md-12 col-sm-12">
-                            <div class="feature-wrap">
-                                <div class="features-icon feature-icon3">
-                                    <i class="fi flaticon-truck"></i>
-                                </div>
-                                <div class="features-text">
-                                    <h3>First Ground Shipping</h3>
-                                    <p>Many desktop publishing packages and web page editors now use Lorem Ipsum as
-                                        their default model text,</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6">
-                    <div class="features-item">
-                        <div class="feature-img">
-                            <img src="assets/images/features/1.png" alt="">
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4">
-                    <div class="features-item">
-                        <div class="col-lg-12 col-md-6 col-sm-12">
-                            <div class="feature-wrap">
-                                <div class="features-icon">
-                                    <i class="fi flaticon-ship"></i>
-                                </div>
-                                <div class="features-text">
-                                    <h3>Quickest Cargo</h3>
-                                    <p>Many desktop publishing packages and web page editors now use Lorem Ipsum as
-                                        their default model text,</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-12 col-md-6 col-sm-12">
-                            <div class="feature-wrap">
-                                <div class="features-icon">
-                                    <i class="fi flaticon-truck-1"></i>
-                                </div>
-                                <div class="features-text">
-                                    <h3>Timely Delivery</h3>
-                                    <p>Many desktop publishing packages and web page editors now use Lorem Ipsum as
-                                        their default model text,</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div> -->
