--- a/index.html
+++ b/index.html
@@ -166,9 +166,7 @@
                     <div class="row">
                         <div class="col col-lg-9 slide-caption">
                             <h2><span>Стань Крепче, Сильнее и </span> <span>Увереннее Вместе с Gold Fitness!</span></h2>
-                            <div class="btns">
-                                <div class="btn-style"><a href="index.html#">Contact us now</a></div>
-                            </div>
+                           
                         </div>
                     </div>
                 </div>
@@ -179,9 +177,9 @@
                     <div class="row">
                         <div class="col col-lg-9 slide-caption">
                             <h2><span>We Provide the Best Solution</span> <span>For Your Transport.</span></h2>
-                            <div class="btns">
+                            <!-- <div class="btns">
                                 <div class="btn-style"><a href="index.html#">Contact us now</a></div>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                 </div>
@@ -691,7 +689,8 @@
         <!-- blog-area start -->
 
         <!-- .footer-area start -->
-        <div class="footer container">
+        <div class="footer ">
+        <div class="container">
             <div class="row">
                 <div class=" col-md-6 map">
                     <iframe
@@ -752,10 +751,10 @@
             </div>
         </div>
         <div class="foot_copy">
-
+                © Copyrights 2019. All Rights Reserved.
         </div>
     </div>
-
+</div>
 
 
     </div>
