--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col col-lg-9 slide-caption">
-                            <h2><span>Спорт это Биение твоего сердца, это твой </span> <span>РИТМ жизни . . .</span>
+                            <h2><span>Спорт это </span>Биение твоего сердца, <span>это твой РИТМ жизни . . .</span>
                             </h2>
                             <!-- <div class="btns">
                                 <div class="btn-style"><a href="index.html#">Contact us now</a></div>
@@ -166,13 +166,13 @@
                     <div class="row">
                         <div class="col col-lg-9 slide-caption">
                             <h2><span>Стань Крепче, Сильнее и </span> <span>Увереннее Вместе с Gold Fitness!</span></h2>
-                           
+
                         </div>
                     </div>
                 </div>
             </div>
             <div class="slide">
-                <img src="assets/images/slider/3.jpg" alt class="slider-bg">
+                <img src="assets/images/slider/2.jpg" alt class="slider-bg">
                 <div class="container">
                     <div class="row">
                         <div class="col col-lg-9 slide-caption">
@@ -337,11 +337,11 @@
                 <div class="row">
                     <div class="col-lg-7 col-md-6 col-sm-12">
                         <div class="counter-content">
-                            <h2>Our Some Important Things That will Satisfite You...</h2>
-                            <p>Many desktop publishing packages and web page editors now use Lorem Ipsum as their
-                                default
-                                model text, and a search for 'lorem ipsum' will uncover many web sites still in their
-                                infancy.Many desktop publishing packages and web page editors now</p>
+                            <h2>Миссия Gold Fitness</h2>
+                            <p>Сделать фитнес частью новой яркой и главное спортивной жизни, в которой человек будет
+                                наслаждаться каждой минутой, проведенной в нашем клубе!
+
+                                У нас есть все, чтобы каждое посещение фитнеса приносило только удовольствие.</p>
                             <div class="btns">
                                 <div class="btn-style btn-style-3"><a href="index.html#">Learn More About Us...</a>
                                 </div>
@@ -690,71 +690,73 @@
 
         <!-- .footer-area start -->
         <div class="footer ">
-        <div class="container">
-            <div class="row">
-                <div class=" col-md-6 map">
-                    <iframe
-                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d731.0456491350257!2d74.63685482918828!3d42.86898998160811!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zNDLCsDUyJzA4LjQiTiA3NMKwMzgnMTQuNyJF!5e0!3m2!1sru!2skg!4v1555480963741!5m2!1sru!2skg"
-                        width="500" height="360" frameborder="5px" style="border:30px solid #222222"
-                        allowfullscreen></iframe>
-                </div>
-                <div class="col-md-6">
-                    <div class="contact">
-                        Контакты
+            <div class="container">
+                <div class="row">
+                    <div class=" col-md-6 map">
+                        <iframe
+                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d731.0456491350257!2d74.63685482918828!3d42.86898998160811!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zNDLCsDUyJzA4LjQiTiA3NMKwMzgnMTQuNyJF!5e0!3m2!1sru!2skg!4v1555480963741!5m2!1sru!2skg"
+                            width="500" height="360" frameborder="5px" style="border: none"
+                            allowfullscreen></iframe>
                     </div>
-                    <div class="row">
-                        <div class="col-md-4 ">
-                            <div class="foot_text_blog">
-                                Телефон:
-                            </div>
-                            <div class="text_2">
-                                +7 (776) 409 68 68
-                            </div>
+               <!--      style="border:30px solid #222222" -->
+                    <div class="col-md-6">
+                        <div class="contact">
+                            Контакты
                         </div>
-                        <div class="col-md-4 ">
-                            <div class="foot_text_blog foot_icon_2">
-                                Email:
+                        <div class="row">
+                            <div class="col-md-4 ">
+                                <div class="foot_text_blog">
+                                    Телефон:
+                                </div>
+                                <div class="text_2">
+                                    +7 (776) 409 68 68
+                                </div>
                             </div>
-                            <div class="text_2">
+                            <div class="col-md-4 ">
+                                <div class="foot_text_blog foot_icon_2">
+                                    Email:
+                                </div>
+                                <div class="text_2">
 
-                                info@gmail.com
+                                    info@gmail.com
+                                </div>
+                            </div>
+                            <div class="col-md-4 ">
+                                <div class="foot_text_blog foot_icon_3 ">
+                                    Адресс:
+                                </div>
+                                <div class="text_2">
+                                    +7 (776) 409 68 68
+                                </div>
                             </div>
                         </div>
-                        <div class="col-md-4 ">
-                            <div class="foot_text_blog foot_icon_3 ">
-                                Адресс:
+                        <div class="row foot_last">
+                            <div class="col-md-6">
+                                <div class="foot_text_blog foot_icon_4">
+                                    Режим:
+                                </div>
+                                <div class="text_2">
+                                    Понедельник - Суббота 8:00 - 22:00
+                                    info@gmail.com
+                                </div>
                             </div>
-                            <div class="text_2">
-                                +7 (776) 409 68 68
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row foot_last">
-                        <div class="col-md-6">
-                            <div class="foot_text_blog foot_icon_4">
-                                Режим:
-                            </div>
-                            <div class="text_2">
-                                Понедельник - Суббота 8:00 - 22:00
-                                info@gmail.com
-                            </div>
-                        </div>
-                        <div class="col-md-6 footer_icons foot_text_blog">
-                            Социальные сети: <br>  
-                           <a href="#"> <i class="fa fa-facebook text_2"></i></a>
-                           <a href="#">  <i class="fa fa-instagram text_2"></i></a>
-                            <a href="#">  <i class="fa fa-twitch text_2"></i></a>
+                            <div class="col-md-6 footer_icons foot_text_blog">
+                                Социальные сети: <br>
+                                <a href="#"> <i class="fa fa-facebook text_2"></i></a>
+                                <a href="#"> <i class="fa fa-instagram text_2"></i></a>
+                                <a href="#"> <i class="fa fa-twitch text_2"></i></a>
+                                <a href="https://github.com/NasipCOM/Gold-Fitness"> <i class="fa fa-github text_2"></i></a>
 
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="foot_copy">
+            <div class="foot_copy">
                 © Copyrights 2019. All Rights Reserved.
+            </div>
         </div>
     </div>
-</div>
 
 
     </div>
