--- a/index.html
+++ b/index.html
@@ -245,20 +245,20 @@
         <div class=" row ">
             <div class="card col-md-4 ">
                 <div class="img-container">
-                    <img id="street" class="img" src="./assets/images/GoldImages/photo_2019-02-27_22-53-40.jpg"
+                    <img onclick="window.open(this.src)" id="street" class="img" src="./assets/images/GoldImages/photo_2019-02-27_22-53-40.jpg"
                         alt="street" />
                 </div>
             </div>
 
             <div class="card col-md-4">
                 <div class="img-container">
-                    <img id="hill" class="img" src="./assets/images/GoldImages/img.jpg" alt="hill" />
+                    <img onclick="window.open(this.src)" id="hill" class="img" src="./assets/images/GoldImages/img.jpg" alt="hill" />
                 </div>
             </div>
 
             <div class="card col-md-4">
                 <div class="img-container">
-                    <img id="lake" class="img" src="./assets/images/GoldImages/img5.jpg" alt="lake" />
+                    <img onclick="window.open(this.src)" id="lake" class="img" src="./assets/images/GoldImages/img5.jpg" alt="lake" />
                 </div>
             </div>
         </div>
@@ -267,19 +267,19 @@
         <div class=" row abc">
             <div class="card col-md-4 ">
                 <div class="img-container">
-                    <img id="street" class="img" src="./assets/images/GoldImages/img2.jpg" alt="street" />
+                    <img onclick="window.open(this.src)" id="street" class="img" src="./assets/images/GoldImages/img2.jpg" alt="street" />
                 </div>
             </div>
 
             <div class="card col-md-4">
                 <div class="img-container">
-                    <img id="hill" class="img" src="./assets/images/GoldImages/img3.jpg" alt="hill" />
+                    <img onclick="window.open(this.src)" id="hill" class="img" src="./assets/images/GoldImages/img3.jpg" alt="hill" />
                 </div>
             </div>
 
             <div class="card col-md-4">
                 <div class="img-container">
-                    <img id="lake" class="img" src="./assets/images/GoldImages/img4.jpg" alt="lake" />
+                    <img onclick="window.open(this.src)" id="lake" class="img" src="./assets/images/GoldImages/img4.jpg" alt="lake" />
                 </div>
             </div>
         </div>
