--- a/shop.html
+++ b/shop.html
@@ -134,6 +134,55 @@
             <img src="assets/images/slider/5.jpg" alt class="slider-bg">
         </div>
     </div>
+</div>
+    <div class="container candyShop">
+        <div class="imgContainer">
+             <img src="assets/images/Shop/optimum-nutrition-gold-standard.jpg" class="imgShop" >
+        </div>
+        <div class="tableShop">
+            <table>
+                <tr>
+                    <th>Производитель:</th>
+                    <td><a href="https://www.ultimatenutrition.com/" target="_blank">Ultimate Nutrition</a></td>
+                </tr>
+                <tr>
+                    <th>Страна бренда:</th>
+                    <td><img src="assets/images/Shop/usa.svg" class="flagShop">США</td>
+                </tr>
+                <tr>
+                    <th>Вес:</th>
+                    <td>4.0 кг</td>
+                </tr>
+                <tr>
+                    <th>Цена</th>
+                    <td>4500 сом</td>
+                </tr>
+            </table>
+        </div>
+        <div class="head">
+            <h2>OPTIMUM NUTRITION GOLD<br>STANDARD 100% Whey Gainer</h2>
+        </div>
+        <div class="text">
+            <p class="text-center"><strong>Описание</strong></p>
+            <p>Смесь белковая Gold standard 100% WHEY производится в США.
+                 Согласно свидетельству о государственной регистрации, эта 
+                 белковая смесь является специализированным пищевым продуктом для питания спортсменов. 
+                 По проверенным показателям продукт соответствует требованиям ТР ТС  027/2012
+                  "О безопасности отдельных видов специализированной пищевой продукции, в том числе диетического
+                   лечебного и диетического профилактического питания". Экспериза показала, что в составе исследуемого
+                    образца нет опасных и вредных вещества — тяжелых металлов (кадмия, свинца, ртути), мышьяка,
+                     афлатоксина и антибиотиков. </p>
+            <p>Кроме того, образце нет каких-либо посторонних растительных компонентов белковой и углеводной природы.
+                 Также не было выявлено наличие препарата коллагенового животного белка. По показателям биологической
+                  ценности белка проверенный продукт соответствует белку молочной сыворотки. В составе образца —
+                   практически идеальное соотношение аминокислот. Общее содержание незаменимых аминокислот составляет
+                    40,1 г на 100 г белка, а их скор — не менее 101 %. </p>
+            <p>По данным производителя, использованный в составе продукта препарат «Aminogen» представляющий собой фермент
+                 (комплекс пептидаз микробиального происхождения), может способствовать улучшению усвоения 
+                 аминокислот и белков.</p>
+        </div>
+    </div>
+</div>
     <body>
 
 
