Bags with adaptivity

--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
         <!-- pice-area start -->
         <div class="pricing-area">
             <div class="container">
-                <div class="section-title text-center">
+                 <div class="section-title text-center">
                     <span>У Нас Лучшие Цены</span>
                     <h2>Наши Цены</h2>
                 </div>
@@ -693,7 +693,8 @@
             <div class="container">
                 <div class="row">
                     <div class=" col-md-6 map">
-                        <iframe
+                        <iframe 
+                            class="container"
                             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d731.0456491350257!2d74.63685482918828!3d42.86898998160811!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zNDLCsDUyJzA4LjQiTiA3NMKwMzgnMTQuNyJF!5e0!3m2!1sru!2skg!4v1555480963741!5m2!1sru!2skg"
                             width="500" height="360" frameborder="5px" style="border: none"
                             allowfullscreen></iframe>
