--- a/index.html
+++ b/index.html
@@ -334,7 +334,9 @@
         <!-- counter-area start -->
         <div class="counter-area">
             <div class="container">
-                <div class="row">
+
+                
+                <!-- <div class="row">
                     <div class="col-lg-7 col-md-6 col-sm-12">
                         <div class="counter-content">
                             <h2>Миссия Gold Fitness</h2>
@@ -376,7 +378,7 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
         <!-- counter-area end -->
