--- a/index.html
+++ b/index.html
@@ -237,6 +237,7 @@
 
     </section>
     <!-- end track-section -->
+    <section id="images">
     <div class="section-title text-center">
         <span>Мы Предоставляем Лучшее</span>
         <h2>Наша Галерея</h2>
@@ -284,6 +285,7 @@
             </div>
         </div>
     </div>
+</section>
     <!-- feature-area start -->
     <div class="features-area features-style-2">
         <div class="container">
@@ -335,7 +337,11 @@
         <div class="counter-area">
             <div class="container">
 
-                
+            <!--     <div class=" row">
+                    <div class="col-md-4 enjoy">Получай результат </div>  
+                    <div class="col-md-4 enjoy_1">Находи друзей </div>        
+                    <div class="col-md-4 enjoy_2">Наслождайся позитивом</div>        
+                </div> -->
                 <!-- <div class="row">
                     <div class="col-lg-7 col-md-6 col-sm-12">
                         <div class="counter-content">
