--- a/index.html
+++ b/index.html
@@ -165,18 +165,20 @@
     <!-- .about-area start -->
     <div class="about-area">
         <div class="container">
+            <div class="section-title1 text-center">
+                <span>Что Мы Можем Предложить</span>
+                <h2>Немного о Нас</h2>
+            </div>
             <div class="row">
                 <div class="col-lg-6">
-                    <div class="about-img">
-                        <div class="gym">
-                            <img src="./assets/images/gym.svg">
-                        </div>
+                    <div class="img-out">
+                        <img src="./assets/images/GoldImages/photo_2019-02-27_22-53-40.jpg">
                     </div>
                 </div>
                 <div class="col-lg-6 sec-p">
                     <div class="about-content">
-                        <div class="about-icon">
-                            <!-- <i class="fi flaticon-travel"></i> -->
+                        <div class="gym">
+                            <img src="./assets/images/gym.svg">
                         </div>
                         <h2>Чем Хорош Gold Fitness?</h2>
 
@@ -748,7 +750,8 @@
                                 Made by:
                             </div>
                             <div class="footer_iconsf">
-                                Contact us:<a href="https://t.me/NasipDev" target="_blank"> <i class="fab fa-telegram"></i></a>
+                                Contact us:<a href="https://t.me/NasipDev" target="_blank"> <i
+                                        class="fab fa-telegram"></i></a>
                             </div>
                         </div>
                     </div>
