--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
                 <h2>Наши товары</h2>
                 <div class="multiple-items">
                     <a href="shop.html" class="square">
-                        <div class="slick_img"><img src="./assets/images/blog/1.jpg"></div>
+                        <div class="slick_img"> <img src="assets/images/Shop/optimum-nutrition-gold-standard.jpg"></div>
                         <h6>FiraCode Gold Fitness</h6>
                         <div class="slick_text">Гейнер</div>
                     </a>
