--- a/shop.html
+++ b/shop.html
@@ -64,53 +64,31 @@
             </div>
         </div>
     </div>
-    <div class="header-area" id="sticky-header">
+    <div class="header-area">
         <div class="container">
             <div class="row">
                 <div class="col-lg-3 col-md-9 col-sm-9 col-9">
-                    <div class="logo">
+                    <div class="logo_1">
                         <p>
                             GOLD FITNESS
                         </p>
-                        <!-- <img class="gold" src="./assets/images/GoldImages/new.png"></img> -->
                     </div>
                 </div>
                 <div class="col-lg-8 d-none d-lg-block">
-                    <div class="main-menu">
+                    <div class="main-menu1">
                         <nav class="nav_mobile_menu">
                             <ul>
-                                <!--  <li class="active"><a href="index.html#">Home</a>
-                                        <ul class="submenu">
-                                            <li class="active"><a href="index.html">Home One</a></li>
-                                            <li><a href="index-2.html">Home Two</a></li>
-                                            <li><a href="index-3.html">Home Three</a></li>
-                                        </ul>
-                                    </li> -->
+
                                 <li><a href="about.html">About</a></li>
                                 <li><a href="index.html#">Services</a>
-                                    <!-- <ul class="submenu">
-                                            <li><a href="service.html">service single</a></li>
-                                            <li><a href="Freight.html">Air Freight</a></li>
-                                            <li><a href="road.html">Road Freight</a></li>
-                                            <li><a href="ocean.html">Ocean Freight</a></li>
-                                        </ul> -->
+
                                 </li>
                                 <li><a href="http://wpocean.com/tf/html/shipter/case.html">Pages</a>
-                                    <!--  <ul class="submenu">
-                                            <li><a href="pricing.html">pricing table</a></li>
-                                            <li><a href="team.html">Team</a></li>
-                                        </ul> -->
+
                                 </li>
                                 <li><a href="contact.html">Contact</a></li>
                                 <li><a href="index.html#">Blog</a>
-                                    <!--   <ul class="submenu">
-                                            <li><a href="blog.html">Blog with right sidebar</a></li>
-                                            <li><a href="blog-right.html">Blog with Left sidebar</a></li>
-                                            <li><a href="blog-fullwidth.html">Blog full width</a></li>
-                                            <li><a href="blog-details.html">Blog single right sidebar</a></li>
-                                            <li><a href="blog-details-right.html">Blog single left sidebar</a></li>
-                                            <li><a href="blog-details-fullwidth.html">Blog single fullwidth</a></li>
-                                        </ul> -->
+
                                 </li>
                             </ul>
                         </nav>
@@ -126,83 +104,109 @@
         </div>
     </div>
 </header>
+
+
+
+
+
+
+
+
+
+
+
 <!-- header-area end -->
 <!-- start of hero -->
-<div class="shop_bg">
-    <div>
-        <div class="bg_img">
-            <img src="assets/images/slider/5.jpg" alt class="slider-bg">
+<!-- <div>
+    <div class="bg_img">
+        <img src="assets/images/slider/5.jpg" alt class="slider-bg">
+    </div>
+</div> -->
+
+<body>
+
+    <div class="shop_bg">
+        <div class="container ">
+            <div class="row">
+                <div class="col-md-4">
+                    <img src="assets/images/Shop/optimum-nutrition-gold-standard.jpg" class="imgShop">
+                </div>
+                <div class="col-md-8">
+
+                    <div class="head">
+                        <h1>OPTIMUM NUTRITION GOLD</h1>
+                    </div>
+                    <div class="row combain">
+                        <div class="col-md-6">
+                            <div class="margin-top">
+                                Производитель:
+                                <a href="https://www.ultimatenutrition.com/" target="_blank">Ultimate Nutrition</a>
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <img src="assets/images/Shop/usa.svg" class="flagShop">
+                            United States
+                        </div>
+                    </div>
+                    <div class="row combain margin-top">
+                        <div class="col-md-6">
+                            Стоимость
+                            <br>
+                            <span>4500 сом</span>
+                        </div>
+                        <div class="col-md-6">
+                            Вес:<br>
+                            <span>4.0 кг</span>
+                        </div>
+
+                    </div>
+
+
+
+
+
+                    <div class="text">
+                        <p class="text-center"><strong>Описание</strong></p>
+                        <p>Смесь белковая Gold standard 100% WHEY производится в США.
+                            Согласно свидетельству о государственной регистрации, эта
+                            белковая смесь является специализированным пищевым продуктом для питания спортсменов.
+                            По проверенным показателям продукт соответствует требованиям ТР ТС 027/2012
+                            "О безопасности отдельных видов специализированной пищевой продукции, в том числе
+                            диетического
+                            лечебного и диетического профилактического питания". Экспериза показала, что в составе
+                            исследуемого
+                            образца нет опасных и вредных вещества — тяжелых металлов (кадмия, свинца, ртути), мышьяка,
+                            афлатоксина и антибиотиков. </p>
+                        <p>Кроме того, образце нет каких-либо посторонних растительных компонентов белковой и углеводной
+                            природы.
+                            Также не было выявлено наличие препарата коллагенового животного белка. По показателям
+                            биологической
+                            ценности белка проверенный продукт соответствует белку молочной сыворотки. В составе образца
+                            —
+                            практически идеальное соотношение аминокислот. Общее содержание незаменимых аминокислот
+                            составляет
+                            40,1 г на 100 г белка, а их скор — не менее 101 %. </p>
+                        <p>По данным производителя, использованный в составе продукта препарат «Aminogen» представляющий
+                            собой фермент
+                            (комплекс пептидаз микробиального происхождения), может способствовать улучшению усвоения
+                            аминокислот и белков.</p>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
-</div>
-    <div class="container candyShop">
-        <div class="imgContainer">
-             <img src="assets/images/Shop/optimum-nutrition-gold-standard.jpg" class="imgShop" >
-        </div>
-        <div class="tableShop">
-            <table>
-                <tr>
-                    <th>Производитель:</th>
-                    <td><a href="https://www.ultimatenutrition.com/" target="_blank">Ultimate Nutrition</a></td>
-                </tr>
-                <tr>
-                    <th>Страна бренда:</th>
-                    <td><img src="assets/images/Shop/usa.svg" class="flagShop">США</td>
-                </tr>
-                <tr>
-                    <th>Вес:</th>
-                    <td>4.0 кг</td>
-                </tr>
-                <tr>
-                    <th>Цена</th>
-                    <td>4500 сом</td>
-                </tr>
-            </table>
-        </div>
-        <div class="head">
-            <h2>OPTIMUM NUTRITION GOLD<br>STANDARD 100% Whey Gainer</h2>
-        </div>
-        <div class="text">
-            <p class="text-center"><strong>Описание</strong></p>
-            <p>Смесь белковая Gold standard 100% WHEY производится в США.
-                 Согласно свидетельству о государственной регистрации, эта 
-                 белковая смесь является специализированным пищевым продуктом для питания спортсменов. 
-                 По проверенным показателям продукт соответствует требованиям ТР ТС  027/2012
-                  "О безопасности отдельных видов специализированной пищевой продукции, в том числе диетического
-                   лечебного и диетического профилактического питания". Экспериза показала, что в составе исследуемого
-                    образца нет опасных и вредных вещества — тяжелых металлов (кадмия, свинца, ртути), мышьяка,
-                     афлатоксина и антибиотиков. </p>
-            <p>Кроме того, образце нет каких-либо посторонних растительных компонентов белковой и углеводной природы.
-                 Также не было выявлено наличие препарата коллагенового животного белка. По показателям биологической
-                  ценности белка проверенный продукт соответствует белку молочной сыворотки. В составе образца —
-                   практически идеальное соотношение аминокислот. Общее содержание незаменимых аминокислот составляет
-                    40,1 г на 100 г белка, а их скор — не менее 101 %. </p>
-            <p>По данным производителя, использованный в составе продукта препарат «Aminogen» представляющий собой фермент
-                 (комплекс пептидаз микробиального происхождения), может способствовать улучшению усвоения 
-                 аминокислот и белков.</p>
-        </div>
+
     </div>
-</div>
-    <body>
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/js/bootstrap.min.js"></script>
+    <!-- Plugins for this template -->
 
 
+    <script src="assets/js/jquery-plugin-collection.js"></script>
+    <script src="assets/js/jquery.slicknav.min.js"></script>
+    <!-- Custom script for this template -->
+    <script src="assets/js/script.js"></script>
 
-
-
-
-
-
-
-        <script src="assets/js/jquery.min.js"></script>
-        <script src="assets/js/bootstrap.min.js"></script>
-        <!-- Plugins for this template -->
-
-
-        <script src="assets/js/jquery-plugin-collection.js"></script>
-        <script src="assets/js/jquery.slicknav.min.js"></script>
-        <!-- Custom script for this template -->
-        <script src="assets/js/script.js"></script>
-
-    </body>
+</body>
 
 </html>
